add coordinate gadget and first draft of vector gadget

--- a/slides/sections/reduction/small_lcs.tex
+++ b/slides/sections/reduction/small_lcs.tex
@@ -29,9 +29,5 @@
 \end{frame}
 
 
-\begin{frame}[t]
-\frametitle{Reduction}
-  \framesubtitle{Small LCS}
-
-asdf
-\end{frame}
+\input{./sections/reduction/small_lcs/coordinate_gadget}
+\input{./sections/reduction/small_lcs/vector_gadget}
