--- a/slides/util/commands.tex
+++ b/slides/util/commands.tex
@@ -12,9 +12,12 @@
 \newcommand{\guardY}[1]{G_Y(#1)}
 % example:
 \newcommand{\exVGguardOne}[3]{\node[base, number, guard] (#3) at ($(#1) + (#2,0)$) {$1^{\gamma_2}$};}
-\newcommand{\exVGguardZero}[2]{
-		\node[base, number, guard] at ($(#1) + (#2,0)$) {$0^{\gamma_1}$};}
-\newcommand{\exVGbigGuardZero}[2]{
-		\node[base, number, big guard] at ($(#1) + (#2,0)$) {$0^{\gamma_3}$};}
-\newcommand{\exVGendGuardY}[2]{
-		\node[base, number, big guard] at ($(#1) + (#2,0)$) {$0^{n\gamma_4}$};}
+\newcommand{\exVGguardZero}[3]{
+		\node[base, number, guard] (#3) at ($(#1) + (#2,0)$) {$0^{\gamma_1}$};}
+\newcommand{\exVGbigGuardZero}[3]{
+		\node[base, number, big guard] (#3) at ($(#1) + (#2,0)$) {$0^{\gamma_3}$};}
+\newcommand{\exVGendGuardY}[3]{
+		\node[base, number, big guard] (#3) at ($(#1) + (#2,0)$) {$0^{n\gamma_4}$};}
+		
+		
+\newcommand{\vg}[1]{VG(#1)}
