add normalized vectors slide

--- a/slides/sections/reduction/small_lcs.tex
+++ b/slides/sections/reduction/small_lcs.tex
@@ -31,3 +31,4 @@
 
 \input{./sections/reduction/small_lcs/coordinate_gadget}
 \input{./sections/reduction/small_lcs/vector_gadget}
+\input{./sections/reduction/small_lcs/normalized_vector_gadget}
