add slides for parameter relations

--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -53,6 +53,10 @@
 \end{frame}
 
 
+\include{sections/introduction/methodology}
+
+\include{sections/parameter_relations/parameter_relations}
+
 \include{sections/reduction/small_lcs}
 
 
