add slides for non-triviality fo parameter setting

--- a/slides/sections/parameter_relations/non_triviality.tex
+++ b/slides/sections/parameter_relations/non_triviality.tex
@@ -2,6 +2,14 @@
 	\frametitle{Non-Triviality of Parameter Space}
 	\framesubtitle{Definitions}
 
-	\begin{definition}
+	\begin{definition}[Parameter Setting]
+		\begin{itemize}
+			\setlength{\itemindent}{1em}
+			\item Set of parameters $\mathcal{P}$,\quad $\mathbf{\alpha} := \alpha_{p \in \mathcal{P}}$
+			\item $\lcsy{\mathbf{\alpha}}$ defined as problem of computing LCS of $x$ and $y$, where:
+			\begin{displaymath}
+				\frac{n^{\alpha_p}}{\gamma} \leq p(x,y) \leq n^{\alpha_p}\gamma, \quad \text{for all } p \in \mathcal{P}
+			\end{displaymath}
+		\end{itemize}
 	\end{definition}
 \end{frame}
