--- a/slides/util/commands.tex
+++ b/slides/util/commands.tex
@@ -1,3 +1,8 @@
+% General LCS
+\newcommand{\lcs}[1]{\text{LCS}(#1)}
+\newcommand{\lcsy}[1]{\text{LCS}^\gamma(#1)}
+
+
 
 % Coordinate gadgets
 \newcommand{\cgZeroX}{\mathbf{0_x}}
