Add slides for large lcs reduction

--- a/slides/sections/reduction/small_lcs.tex
+++ b/slides/sections/reduction/small_lcs.tex
@@ -32,3 +32,8 @@
 \input{./sections/reduction/small_lcs/coordinate_gadget}
 \input{./sections/reduction/small_lcs/vector_gadget}
 \input{./sections/reduction/small_lcs/normalized_vector_gadget}
+\input{./sections/reduction/small_lcs/full_reduction}
+
+%todo: Overview
+
+\input{./sections/reduction/small_lcs/show_parameters}
