--- a/slides/sections/introduction/methodology.tex
+++ b/slides/sections/introduction/methodology.tex
@@ -25,7 +25,7 @@
 	}{KITlightgreen}}
 	
 	\column[t]{0.3\textwidth}
-	\only<3->{
+	\visible<3->{
 	\KITpanel{2. Find Parameter Relations}{%
 		\begin{itemize}
 			\item Bound parameters of $\mathbb{B}$
@@ -35,7 +35,7 @@
 	}
 	
 	\column[t]{0.3\textwidth}
-	\only<4->{
+	\visible<4->{
 	\KITpanel{3. Find Reduction(s) from $\mathbb{A} \rightarrow \mathbb{B}$}{%
 		\begin{itemize}
 			\item Check reductions span full parameter space
