--- a/slides/sections/reduction/small_lcs/full_reduction.tex
+++ b/slides/sections/reduction/small_lcs/full_reduction.tex
@@ -1,78 +1,17 @@
-\newcommand{\sLCSnvg}[2]{%
-	\node[base, number, input, minimum width=4.5em] (#1) at (base) {$\nvg{#2}$};
-}
-\newcommand{\sLCSnvgWithGuard}[3]{%
-	\sLCSnvg{#1}{#2}
-	\node[base, number, guard] (#3) at ($(#1.east)$) {$0^\gamma$};
-}
-
 \begin{frame}
 	\frametitle{Reduction}
-	\framesubtitle{Final Step}
+	\framesubtitle{OR Gadget}
 	
-\begin{exampleblock}{Final Construction}
+\begin{exampleblock}{OR Gadget}
 For an OV instance $\mathcal{A} = \{a_1, \ldots, a_A\}$, $\mathcal{B} = \{b_1, \ldots, b_B\}$, we define:
 
 \vspace{2ex}
 
 \begin{figure}
 	\centering
-	\only<1->{
+	\only<1-4>{
 	\begin{tikzpicture}[x=1.5em]
-		\tikzstyle{base} = [minimum width=1.5em, inner sep=1pt, anchor=west]
-		\tikzstyle{text element} = []
-		\tikzstyle{number} = [minimum height=14pt]  
-		\tikzstyle{guard} = [fill=KITicegray]  
-		\tikzstyle{guard edge} = [color=KITicegray]
-		\tikzstyle{big guard} = [fill=KITicegray!75!black]
-		\tikzstyle{big guard edge} = [color=KITicegray!75!black]
-		\tikzstyle{input} = [fill=KITgreen]
-		\tikzstyle{input edge} = [color=KITgreen]
-		\tikzstyle{cell} = [draw, minimum width=1.5em, fill=KITwhite]
-		
-		\node[base, text element] (eqX) at (0,0) {$=$};
-		\node[base, text element, anchor=east] (x) at (eqX.west) {$x$};
-		
-		\coordinate (base) at ($(eqX.east) + (2,0)$);
-		\sLCSnvgWithGuard{a1_1}{a_1}{a_g1_1}
-		
-		\node[base, minimum width=3em] (a_dots_1) at (a_g1_1.east) {$\cdots$};
-		
-		
-		\node[base, number, guard] (a_gn_left_1) at (a_dots_1.east) {$0^\gamma$};
-		\coordinate (base) at (a_gn_left_1.east);
-		\sLCSnvgWithGuard{an_1}{a_A}{a_gn_1}
-		\coordinate (base) at (a_gn_1.east);
-		\sLCSnvgWithGuard{a1_2}{a_1}{a_g1_2}
-		
-		\node[base, minimum width=3em] (a_dots_2) at (a_g1_2.east) {$\cdots$};
-		
-		\node[base, number, guard] (a_g2_2) at (a_dots_2.east) {$0^\gamma$};
-		\coordinate (base) at (a_g2_2.east);
-		\sLCSnvg{an_2}{a_A}
-		
-		
-		\node[base, text element] (eqY) at (0,-1.2) {$=$};
-		\node[base, text element, anchor=east] (y) at (eqY.west) {$y$};
-		
-		
-		\coordinate (base) at ($(eqY.east)$);
-		\node[base, number, guard, minimum width=3em] (b_left) at (base) {$0^{A\gamma'}$};
-		\coordinate (base) at (b_left.east);
-		\sLCSnvgWithGuard{b1}{b_1}{b_g1}
-		\coordinate (base) at (b_g1.east);
-		\node[base, number, input, minimum width=6em] (b2) at (base) {$\nvg{b_{2}}$};
-		\node[base, number, guard] (b_g2) at (b2.east) {$0^\gamma$};
-		
-		\node[base, minimum width=4.5em] (b_dots_1) at (b_g2.east) {$\cdots$};
-		
-		\coordinate (base) at (b_dots_1.east);
-		\node[base, number, guard] (b_g3) at (base) {$0^\gamma$};
-		\node[base, number, input, minimum width=6em] (b3) at (b_g3.east) {$\nvg{b_{B-1}}$};
-		\node[base, number, guard] (b_g4) at (b3.east) {$0^\gamma$};
-		\coordinate (base) at (b_g4.east);
-		\sLCSnvg{bB}{b_{B}}
-		\node[base, number, guard, minimum width=3em] (b_right) at (bB.east) {$0^{A\gamma'}$};
+		\sLCSFinalConstruction
 		
 		\only<2->{
 			\path[draw, guard edge] (a_g1_1.south) edge (b_left.north);
@@ -91,7 +30,6 @@ For an OV instance $\mathcal{A} = \{a_1, \ldots, a_A\}$, $\mathcal{B} = \{b_1, \
 			\path[draw, input edge] (a_dots_2.south) edge (b3.north);
 			\path[draw, guard edge] (a_g2_2.south) edge (b_g4.north);
 			\path[draw, input edge] (an_2.south) edge (bB.north);
-			
 		}
 	
 	\end{tikzpicture}
@@ -101,9 +39,9 @@ For an OV instance $\mathcal{A} = \{a_1, \ldots, a_A\}$, $\mathcal{B} = \{b_1, \
 	
 \vspace{2ex}
 
-\only<2->{
+\visible<2->{
 \begin{theorem}
-	For any OV instance $\mathcal{A} = \{a_1, \ldots, a_A\}$ and $\mathcal{B} = \{b_1, \ldots, b_B\}$ with $A \geq B$ and dimension $D$, we can construct the strings $x, y$ in time $\bigO{AD}$, satisfying:
+	For an OV instance $\mathcal{A} = \{a_1, \ldots, a_A\}$ and $\mathcal{B} = \{b_1, \ldots, b_B\}$ with $A \geq B$ and dimension $D$, we can construct the strings $x, y$ in time $\bigO{AD}$, satisfying:
 
 	\vspace{2ex}
 
@@ -114,5 +52,76 @@ For an OV instance $\mathcal{A} = \{a_1, \ldots, a_A\}$, $\mathcal{B} = \{b_1, \
 	\end{enumerate}
 \end{theorem}	
 }	
+	
+\end{frame}
+
+
+
+
+% =====================================================================================================
+% =====================================================================================================
+% =====================================================================================================
+% =====================================================================================================
+% =====================================================================================================
+
+
+
+\begin{frame}
+	\frametitle{Reduction}
+	\framesubtitle{Correctness}
+	
+\begin{exampleblock}{OR Gadget}
+For an OV instance $\mathcal{A} = \{a_1, \ldots, a_A\}$, $\mathcal{B} = \{b_1, \ldots, b_B\}$ with $D = n^{o(1)}$, we define:
+
+\vspace{2ex}
+
+\begin{figure}
+	\centering
+	\only<1-7>{
+	\begin{tikzpicture}[x=1.5em, y=0.7cm]
+		\sLCSFinalConstruction	
+	\end{tikzpicture}
+	}
+\end{figure}
+\end{exampleblock}
+
+\visible<1->{
+\begin{theorem}
+	Let $\mathbf{\alpha}$ be a parameter setting with \emphTheorem{$\alpha_\Sigma = 0$} and \emphTheorem{$\alpha_\delta = \alpha_m$}. 
+	There is $\gamma \geq 1$ such that $\lcsy{\mathbf{\alpha}}$ takes time $d^{1-o(1)}$, unless OVH fails.
+\end{theorem}	
+}	
+
+\only<2>{
+\begin{definition}[Parameter Setting (recall)]
+		\begin{itemize}
+			\setlength{\itemindent}{1em}
+			\item Set of parameters $\mathcal{P}$,\quad $\mathbf{\alpha} := \alpha_{p \in \mathcal{P}}$
+			\item $\lcsy{\mathbf{\alpha}}$ defined as problem of computing LCS of $x$ and $y$, where:
+			\begin{displaymath}
+				\frac{n^{\alpha_p}}{\gamma} \leq p(x,y) \leq n^{\alpha_p}\gamma, \quad \text{for all } p \in \mathcal{P}
+			\end{displaymath}
+		\end{itemize}
+\end{definition}
+}
+
+\visible<3->{
+\begin{proof}
+\textbf{Given:} parameter setting $\mathbf{\alpha}$ and $n \geq 1$. \textbf{Notation:} $p = n^{\alpha_p}$ for $p \in \mathcal{P}$ as \emphBeamer{target value} of this parameter.
+\vspace{-1ex}
+\begin{columns}
+	\column[t]{0.01\textwidth}
+	\column[t]{0.99\textwidth}
+	\begin{itemize}
+		\item<4-> use construction with \emphTheorem{$A := \lfloor L/D \rfloor$} and \emphTheorem{$B := \lfloor d/(LD) \rfloor$}
+		\item<5-> UOVH implies lower bound for running time: $(AB)^{1 - o(1)} = (d/D^2)^{1 - o(1)} = n^{\alpha_d - o(1)} = d^{1 - o(1)}$.
+		\item<6-> reduction time $\bigO{AD} = \bigO{L} \leq \bigO{d^{1-\varepsilon}}$
+		\item<7-> seen before: $L(x,y) \geq \rho \Leftrightarrow \exists a_i, b_j:\; \langle a_i,b_j \rangle = 0$ \quad\quad (for some appropriate $\rho$)
+	\end{itemize}		
+	
+\end{columns}
+\end{proof}
+
+}
 	
 \end{frame}
