--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -53,7 +53,7 @@
 \end{frame}
 
 
-\include{sections/introduction/methodology}
+\include{sections/introduction}
 
 \include{sections/parameter_relations/parameter_relations}
 
