--- a/slides/util/commands.tex
+++ b/slides/util/commands.tex
@@ -2,6 +2,7 @@
 \newcommand<>{\emphTheorem}[1]{\textbf#2{\textcolor{black}{#1}}}
 
 \newcommand{\bigO}[1]{\mathcal{O}(#1)}
+\newcommand{\tildeBigO}[1]{\tilde{\mathcal{O}}(#1)}
 
 % General LCS
 \newcommand{\lcs}[1]{\text{LCS}(#1)}
