--- a/slides/util/preamble_general.tex
+++ b/slides/util/preamble_general.tex
@@ -7,11 +7,13 @@
 \usetikzlibrary {shapes}
 \usetikzlibrary{shapes.arrows} 
 \usetikzlibrary{shapes.geometric} 
+\usetikzlibrary {shapes.multipart} 
 \usetikzlibrary {calc} 
 \usetikzlibrary{math} 
 \usetikzlibrary {quotes} % for "label" on edges 
 \usetikzlibrary {positioning} 
 \usetikzlibrary{backgrounds}
+\usetikzlibrary {matrix} 
 
 % Define a background layer
 \pgfdeclarelayer{bg}
