--- a/slides/sections/parameter_relations/parameter_relations.tex
+++ b/slides/sections/parameter_relations/parameter_relations.tex
@@ -72,3 +72,35 @@
 
 
 \input{sections/parameter_relations/non_triviality}
+
+
+\begin{frame}
+	\frametitle{Find Parameter Relations}
+	\framesubtitle{Overview}	
+	
+	\begin{columns}[onlytextwidth]
+	\column[t]{0.3\textwidth}
+	\KITpanel{1. Define Parameters}{%
+		\begin{itemize}
+			\item List parameters of problem $\mathbb{B}$
+		\end{itemize}
+	}{KITlightgreen}
+	
+	\column[t]{0.3\textwidth}
+	\KITpanel{2. Find Parameter Relations}{%
+		\begin{itemize}
+			\item Bound parameters of $\mathbb{B}$
+			\item Proof non-triviality of fully bounded parameter space
+		\end{itemize}
+	}{KITlightgreen}
+	
+	\column[t]{0.3\textwidth}
+	\KITpanel{\color{KITwhite}3. Find Reduction(s) from $\mathbb{A} \rightarrow \mathbb{B}$}{%
+		\begin{itemize}
+		\color{KITwhite}
+			\item Check reductions span full parameter space
+			\item Derive lower bound for all parameter setting
+		\end{itemize}
+	}{KITdarkblue}
+	\end{columns}
+\end{frame}
